--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@
 // $primary-back-color: #E5E5E5; ??? #212327;
 $primary-back-color: #212327;
 $primary-block-back-color: #303238;
+$primary-tooltip-back-color: #4C4C4C;
 
 // text colors and fonts
 $primary-text-color1: #6D6E77;
